Fix alignment on mobile

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,6 +10,7 @@ body {
   align-items: center;
   text-align: center;
   min-height: 100vh;
+  min-height: 100dvh;
   background-color: #0078f8;
   font-family: 'Press Start 2P', monospace;
   color: #fff;
